css fixes and logo re-alignments.

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -187,12 +187,6 @@ hr.small {
   -o-background-size: cover;
 }
 
-.padded-container {
-  display: table-cell;
-  padding-bottom: 10%;
-  padding-top: 10%;
-}
-
 @media only screen and (max-width: 769px) {
   .header {
     height: 250px;
@@ -213,8 +207,6 @@ hr.small {
     font-size: 12px !important;
   }
 }
-
-/* About */
 
 /* Services */
 
@@ -261,6 +253,32 @@ hr.small {
   margin: 10px;
 }
 
+/* Clients */
+a.thumbnail {
+  line-height: 2.5;
+  background: #ed1442;
+  display: block;
+  font-size: medium;
+  font-weight: bold;
+  color: white;
+  padding: 4px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+a.thumbnail:hover {
+  border-color: white;
+  color: white;
+}
+
 /* Map */
 
 .map {
@@ -277,43 +295,25 @@ hr.small {
 }
 
 /* Footer */
-
 footer {
+  background: #000;
   padding: 5px;
 }
-.thumbnail {
-  display: block;
-  padding: 4px;
-  line-height: 20px;
-  border: 2px solid #ddd;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+footer a:hover {
+  color: #ed1442;
+  text-decoration: none;
 }
 
 .text_decider {
   color: #fff;
 }
 
-/*Top background*/
-.top_handle {
+#top {
+  padding-top: 20%;
+  padding-bottom: 10%;
   background-image: url("../img/header_cover.jpg");
   background-repeat: no-repeat;
-  /* background-size: contain; */
   background-position: center;
-}
-.heading_sec {
-  text-align: center;
-  text-decoration: underline;
-  /*-webkit-text-decoration-color:  red;  
-    text-decoration-color: red;*/
 }
 .red_text {
   color: #ed1442;
@@ -434,7 +434,8 @@ footer {
   .sm-links {
     position: relative;
   }
-  .col-xs-10, .col-xs-8 {
+  .col-xs-10,
+  .col-xs-8 {
     padding-left: unset;
   }
 }
